--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <p>This is a simple static website template. You can use it as a starting point for your own projects.</p>
     </main>
     <footer>
-        <p>&copy; 2024 TS</p>
+        <p>&copy; 2024 TS   ssssss</p>
         <h1>Saasss</h1>
     </footer>
 </body>
